# bmstest1

./: .gitignore  CMakeLists.txt  README.md  bms.c  checker.c  init.c  limits.h  model.c  model.h
.github/: copilot-instructions.md
battery/: balancing.c  balancing.h  safety_checks.c
bmb3y/: bmb3y.c  bmb3y.h
bms/app/: bms.c  hardware_checks.c  hardware_checks.h  init.c  model.c  model.h
bms/app/battery/: balancing.c  balancing.h  current_limits.c  current_limits.h  safety_checks.c  safety_checks.h
bms/app/calibration/: calibration.c  calibration.h  common.c  common.h  offline.c  online.c  online.h
bms/app/estimators/: basic_count.c  ekf.c  ekf.h  estimators.h  fancy_count.c  kalman.c  voltage_based.c
bms/app/state_machines/: base.c  contactors.c  contactors.h  system.c  system.h
bms/config/: allocations.h  limits.h  pins.h
bms/drivers/bmb3y/: bmb3y.c  bmb3y.h  crc.c  crc.h
bms/drivers/chip/: i2c.c  i2c.h  nvm.c  nvm.h  pwm.c  pwm.h  watchdog.c
bms/drivers/comms/: duart.c  duart.h
bms/drivers/contactors/: contactors.c  contactors.h
bms/drivers/isospi/: isosnoop.c  isospi_master.c  isospi_master.h  isospi_master_async.c
bms/drivers/sensors/: ads1115.c  ads1115.h  ina228.c  ina228.h  internal_adc.c  internal_adc.h
bms/lib/: aema.h  math.h  ringbuf.h
bms/protocols/cli/: cli.c  cli.h
bms/protocols/hmi_serial/: hmi_serial.c  hmi_serial.h
bms/protocols/inverter/: byd_can.c  can.c  can.h  custom_can.c  inverter.h
bms/sys/events/: events.c  events.h
bms/sys/logging/: logging.c  logging.h
calibration/: offline.c
debug/: events.c  events.h
docs/superpowers/plans/: 2026-06-10-ekf-refactor.md
docs/superpowers/specs/: 2026-06-10-ekf-refactor-design.md
estimators/: ekf.c  voltage_based.c
hw/: allocation.h  checks.c  duart.c  pins.h
hw/actuators/: contactors.c
hw/chip/: nvm.c
hw/comms/: duart.c  hmi_serial.c  hmi_serial.h  internal_serial.c
hw/sensors/: ads1115.c  ads1115.h  ina228.c  ina228.h  internal_adc.c  internal_adc.h
inverter/: byd_can.c
isospi/: isospi_master.c  isospi_master.h  isospi_master.pio
lib/: math.h
monitoring/: events.c  events.h
state_machines/: base.c  contactors.c  contactors.h  system.c  system.h
tests/: CMakeLists.txt  coverage_report.sh  dump_current_limits.c  model_working_charge_limit.py  physical_model.c  plot_limits.py  run_tests.sh  test_balancing.c  test_contactors.c  test_current_limits.c  test_events.c  test_events_detailed.c  test_low_voltage.c  test_model.c  test_sampler.c  test_soc.c  test_state_machine_base.c  test_system_sm.c
tests/include/drivers/chip/: nvm.h
tests/include/hardware/: i2c.h
tests/include/pico/: stdlib.h
tools/: boot_capture.txt  boot_run_capture.txt  bootsel_touch.ps1  capture_boot.ps1  run_capture.txt  run_seq_capture.txt  send_cmd.ps1  serial_capture.txt
